clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-switch-cond/await-expr-switch-cond.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

_Async int f(int start) { 
  int result = start;
  switch (_Await read(1)) { // #1
    case 0:
        return 0;
    case 1:
        return 1;
    default:
        return -1;
  }
}

// expected-error@#1 {{_Await expression is not allowed to appear in condition statement of switch statement}}

int main() {
  return 0;
}